# seatuya

./: .gitignore  CHANGES-seatuya.md  CLAUDE.md  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.distributions  README.md  UNBOXING.md  YAML-FFI-DESIGN.md  configure.ac  crypto-fast.lsp  crypto.lsp  fetch-deps.sh  find-lib.lsp  libtls.lsp  other-bindings.md  resolve-mac.sh  seatuya.3  seatuya.lsp  sousctl.1  tuya-devices.lsp  yaml.lsp
bindings/: Makefile.am
bindings/ada/: Makefile.am  README.md  seatuya.adb  seatuya.ads  seatuya_test.adb
bindings/algol68/: Makefile.am  README.md  example.a68  seatuya.a68
bindings/apl/: Makefile.am  README.md  example.apl  seatuya.apl
bindings/bqn/: Makefile.am  README.md  example.bqn  seatuya.bqn
bindings/carp/: Makefile.am  README.md  example.carp  seatuya.carp
bindings/chicken/: Makefile.am  README.md  example.scm  seatuya.scm
bindings/clojure/: Makefile.am  README.md  example.clj  seatuya.clj
bindings/cobol/: Makefile.am  README.md  example.cbl  seatuya.cbl
bindings/commonlisp/: Makefile.am  README.md  example.lisp  seatuya.lisp
bindings/crystal/: Makefile.am  README.md  example.cr  seatuya.cr
bindings/csharp/: Makefile.am  README.md  Seatuya.cs  Seatuya.csproj
bindings/d/: Makefile.am  README.md  example.d  seatuya.d
bindings/dart/: Makefile.am  README.md  example.dart  pubspec.yaml  seatuya.dart
bindings/eiffel/: Makefile.am  README.md  example.e  seatuya.e
bindings/elixir/: Makefile.am  README.md  example.exs  seatuya.exs
bindings/emacs/: Makefile.am  README.md  example.el  seatuya.el
bindings/erlang/: Makefile.am  README.md  example.erl  seatuya.erl  seatuya_nif.c
bindings/euphoria/: Makefile.am  README.md  example.ex  seatuya.ex
bindings/factor/: Makefile.am  README.md  example.factor  seatuya.factor
bindings/fennel/: Makefile.am  README.md  example.fnl  seatuya.fnl
bindings/forth/: Makefile.am  README.md  example.fs  seatuya.fs
bindings/fortran/: Makefile.am  README.md  example.f90  seatuya.f90
bindings/freepascal/: Makefile.am  README.md  example.pas  seatuya.pas
bindings/fsharp/: Example.fsx  Makefile.am  README.md  Seatuya.fs
bindings/gauche/: Makefile.am  README.md  example.scm  seatuya.scm
bindings/gerbil/: Makefile.am  README.md  example.ss  seatuya.ss
bindings/gleam/: Makefile.am  README.md  example.gleam  seatuya.gleam  seatuya_ffi.erl  seatuya_nif.c  seatuya_nif.erl
bindings/go/: Makefile.am  README.md  example.go  go.mod  seatuya.go
bindings/guile/: Makefile.am  README.md  example.scm  seatuya.scm
bindings/haskell/: Example.hs  Makefile.am  README.md  Seatuya.hs
bindings/haxe/: Example.hx  Makefile.am  README.md  Seatuya.hx
bindings/hy/: Makefile.am  README.md  example.hy  seatuya.hy
bindings/idris/: Example.idr  Makefile.am  README.md  Seatuya.idr
bindings/janet/: Makefile.am  README.md  example.janet  seatuya.janet
bindings/jlang/: Makefile.am  README.md  example.ijs  seatuya.ijs
bindings/julia/: Makefile.am  README.md  Seatuya.jl  example.jl
bindings/kotlin/: Example.kt  Makefile.am  README.md  Seatuya.kt
bindings/lua/: Makefile.am  README.md  example.lua  seatuya.lua
bindings/mercury/: Makefile.am  README.md  example.m  seatuya.m
bindings/nim/: Makefile.am  README.md  example.nim  seatuya.nim
bindings/node/: Makefile.am  README.md  example.js  package.json  seatuya.js
bindings/objc/: Makefile.am  README.md  Seatuya.h  Seatuya.m  example.m
bindings/ocaml/: Makefile.am  README.md  example.ml  seatuya.ml
bindings/odin/: Makefile.am  README.md  example.odin  seatuya.odin
bindings/perl/: Makefile.am  README.md  Seatuya.pm  example.pl
bindings/php/: Makefile.am  README.md  Seatuya.php  example.php
bindings/picolisp/: Makefile.am  README.md  example.l  seatuya.l
bindings/pony/: Makefile.am  README.md  example.pony  seatuya.pony
bindings/prolog/: Makefile.am  README.md  example.pl  seatuya.pl
bindings/python/: Makefile.am  README.md  example.py  seatuya.py
bindings/r/: Makefile.am  README.md  example.R  seatuya.R  seatuya_r.c
bindings/racket/: Makefile.am  README.md  example.rkt  seatuya.rkt
bindings/red/: Makefile.am  README.md  example.red  seatuya.red
bindings/ruby/: Makefile.am  README.md  example.rb  seatuya.rb
bindings/rust/: Cargo.toml  Makefile.am  README.md
bindings/rust/examples/: example.rs
bindings/rust/src/: lib.rs
bindings/scala/: Example.scala  Makefile.am  README.md  Seatuya.scala
bindings/shen/: Makefile.am  README.md  example.shen  seatuya.shen
bindings/sml/: Makefile.am  README.md  example.sml  seatuya.sml
bindings/squeak/: Makefile.am  README.md  example.st  seatuya.st
bindings/swift/: Makefile.am  README.md  example.swift  seatuya.swift
bindings/tcl/: Makefile.am  README.md  example.tcl  seatuya.tcl
bindings/terra/: Makefile.am  README.md  example.t  seatuya.t
bindings/v/: Makefile.am  README.md  example.v  seatuya.v
bindings/vala/: Makefile.am  README.md  example.vala  seatuya.vala
bindings/wren/: Makefile.am  README.md  example.wren  seatuya.wren  seatuya_wren.c
bindings/zig/: Makefile.am  README.md  example.zig  seatuya.zig
examples/: Makefile.am  seatuya-wizard.lsp  sousctl.c  sousvide-ramp.c  sousvide-ramp.lsp  tuyaprobe.c  tuyascan.c  wizard-common.c  wizard-common.h  wizard-https-libtls.c  wizard-https-openssl.c
include/: Makefile.am  seatuya.h
src/: Makefile.am  seatuya.c  seatuya.cpp  yaml_wrap.c
tests/: Makefile.am  test_seatuya.c
tools/: yaml2lsp.lsp
