SUBDIRS = include src tests examples
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = README COPYING AUTHORS NEWS ChangeLog INSTALL fetch-deps.sh \
	README.distributions \
	seatuya.lsp \
	tuya-devices.lsp \
	find-lib.lsp \
	libtls.lsp \
	crypto.lsp \
	dist/rpm/seatuya.spec \
	dist/debian/control \
	dist/debian/rules \
	dist/debian/changelog \
	dist/debian/copyright \
	dist/debian/source/format \
	dist/debian/libseatuya0.install \
	dist/debian/libseatuya-dev.install \
	dist/arch/PKGBUILD \
	dist/alpine/APKBUILD \
	dist/freebsd/Makefile \
	dist/freebsd/pkg-descr \
	dist/freebsd/pkg-plist \
	dist/freebsd/distinfo \
	dist/openbsd/Makefile \
	dist/openbsd/pkg/DESCR \
	dist/openbsd/pkg/PLIST \
	dist/netbsd/Makefile \
	dist/netbsd/DESCR \
	dist/netbsd/PLIST \
	dist/netbsd/distinfo \
	dist/gentoo/seatuya-0.1.0.ebuild \
	dist/gentoo/metadata.xml \
	dist/nixos/default.nix \
	dist/slackware/seatuya.SlackBuild \
	dist/slackware/slack-desc \
	dist/slackware/seatuya.info

dist_man_MANS = seatuya.3
