## Process this file with automake to produce Makefile.in.

SUBDIRS = node picolisp ada csharp tcl lua julia janet bqn \
          perl python go ruby dart kotlin commonlisp guile racket rust \
          swift zig odin haskell ocaml sml gauche chicken gerbil \
          clojure nim crystal d erlang elixir fsharp r freepascal \
          carp shen pony prolog red forth apl objc \
          fortran cobol algol68
